<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Todo App</string>
    <string name="add_todo">Add Todo</string>
    <string name="todo_details">Todo Details</string>
    <string name="title">Title</string>
    <string name="title_hint">Enter todo title</string>
    <string name="title_required">Title is required</string>
    <string name="description">Description</string>
    <string name="description_hint">Enter todo description (optional)</string>
    <string name="no_description">No description</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="due_date">Due Date</string>
    <string name="due_date_hint">Select due date (optional)</string>
    <string name="no_due_date">No due date</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_todo">Delete Todo</string>
    <string name="delete_confirmation">Are you sure you want to delete this todo?</string>
    <string name="cancel">Cancel</string>
    <string name="mark_complete">Mark as complete</string>
    <string name="created_on">Created on %s</string>
    <string name="search_hint">Search todos....</string>
    <string name="delete_completed">Delete Completed</string>
    <string name="settings">Settings</string>
    <string name="todo_deleted">Todo "%s" deleted</string>
    <string name="undo">Undo</string>
</resources>
